Converting to version catalogue

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,12 @@
 [versions]
 kotlin = "2.2.10"
+typeflows-github = "0.0.1.0"
 version-catalog-update = "1.0.0"
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
+typeflows-github = { id = "io.typeflows.github", version.ref = "typeflows-github" }
 version-catalog-update = { id = "nl.littlerobots.version-catalog-update", version.ref = "version-catalog-update" }
 
+[libraries]
+typeflows-github = { module = "io.typeflows:typeflows-github", version.ref = "typeflows-github" }
