--- a/.github/workflows/Build.yml
+++ b/.github/workflows/Build.yml
@@ -1,6 +1,7 @@
 name: Build
-on:
-  workflow_dispatch: {}
+'on':
+  workflow_dispatch: {
+    }
   push:
     branches-ignore:
     - develop
@@ -18,7 +19,7 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v5.0.0
     - name: Setup Java
-      uses: actions/setup-java@v4.7.1
+      uses: actions/setup-java@v5.0.0
       with:
         distribution: adopt
         java-version: '21'
