--- a/jvm/gradle/.github/workflows/Build.yml
+++ b/jvm/gradle/.github/workflows/Build.yml
@@ -29,8 +29,8 @@ jobs:
       run: ./gradlew check --info
       shell: bash
     - name: Publish Test Report
-      uses: mikepenz/action-junit-report@v5.6.2
       if: always()
+      uses: mikepenz/action-junit-report@v5.6.2
       with:
         report_paths: '**/build/test-results/test/TEST-*.xml'
         github_token: ${{ secrets.GITHUB_TOKEN }}
@@ -46,11 +46,17 @@ jobs:
       env:
         GH_TOKEN: ${{ secrets.WORKFLOWS_TOKEN }}
       shell: bash
-    - name: Trigger release workflow
-      uses: peter-evans/repository-dispatch@v3
+    - name: Repository Dispatch
       if: (github.ref == 'refs/heads/main' && steps.get-version.outputs.tag-created
         == 'true')
-      with:
-        token: ${{ secrets.WORKFLOWS_TOKEN }}
-        event-type: release
-        client-payload: '{"tag": "${{ steps.get-version.outputs.tag }}"}'
+      run: |-
+        curl -L \
+          -X POST \
+          -H "Accept: application/vnd.github+json" \
+          -H "Authorization: Bearer $GH_TOKEN" \
+          -H "X-GitHub-Api-Version: 2022-11-28" \
+          https://api.github.com/repos/${{ github.repository }}/dispatches \
+          -d '{"event_type":"release","client_payload":{"tag":"${{ steps.get-version.outputs.tag }}"}}'
+      env:
+        GH_TOKEN: ${{ secrets.WORKFLOWS_TOKEN }}
+      shell: bash
