Rearrange platforms to cope with CHANGELOG and versions etc

--- a/jvm/examples/gradle/.github/workflows/deploy.yml
+++ b/jvm/examples/gradle/.github/workflows/deploy.yml
@@ -4,7 +4,7 @@ name: Deploy to Production
     branches:
     - release
     paths:
-    - src/**
+    - ../../../../../src
 jobs:
   build:
     runs-on: ubuntu-latest
