--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -27,10 +27,10 @@ jobs:
       run: ./gradlew versionCatalogUpdate
       shell: bash
     - name: Build (root)
-      run: ./gradlew clean build
+      run: ./gradlew clean build typeflowsExport
       shell: bash
     - name: Build (JVM gradle)
-      run: cd jvm/examples/gradle && ./gradlew clean build && cd -
+      run: cd jvm/examples/gradle && ./gradlew clean build typeflowsExport && cd -
       shell: bash
     - name: Check for changes
       id: changes
