--- a/jvm/examples/maven/pom.xml
+++ b/jvm/examples/maven/pom.xml
@@ -18,7 +18,6 @@
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <kotlin.version>2.2.20</kotlin.version>
     </properties>
 
     <dependencyManagement>
@@ -26,7 +25,7 @@
             <dependency>
                 <groupId>org.jetbrains.kotlin</groupId>
                 <artifactId>kotlin-stdlib</artifactId>
-                <version>${kotlin.version}</version>
+                <version>2.2.20</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -37,7 +36,7 @@
                 <plugin>
                     <groupId>org.jetbrains.kotlin</groupId>
                     <artifactId>kotlin-maven-plugin</artifactId>
-                    <version>${kotlin.version}</version>
+                    <version>2.2.20</version>
                     <executions>
                         <execution>
                             <id>compile</id>
@@ -47,6 +46,11 @@
                             </goals>
                         </execution>
                     </executions>
+                </plugin>
+                <plugin>
+                    <groupId>org.codehaus.mojo</groupId>
+                    <artifactId>versions-maven-plugin</artifactId>
+                    <version>2.16.2</version>
                 </plugin>
             </plugins>
         </pluginManagement>
