--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -23,11 +23,14 @@ jobs:
         distribution: temurin
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v4.4.2
-    - name: Build (root)
+    - name: Build (Root)
       run: ./gradlew versionCatalogUpdate build
       shell: bash
-    - name: Build (JVM gradle)
+    - name: Build (JVM Gradle)
       run: cd jvm/examples/gradle && ./gradlew versionCatalogUpdate build && cd -
+      shell: bash
+    - name: Build (JVM Maven)
+      run: cd jvm/examples/maven && ./mvn versions:use-latest-versions && cd -
       shell: bash
     - name: Check for changes
       id: changes
