--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -23,7 +23,7 @@ jobs:
         distribution: temurin
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v4.4.2
-    - name: Set up Gradle
+    - name: Set up Maven
       uses: stCarolas/setup-maven@v5
       with:
         maven-version: 3.9.9
