--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -34,7 +34,7 @@ jobs:
       run: cd jvm/examples/gradle && ./gradlew versionCatalogUpdate build && cd -
       shell: bash
     - name: Build (JVM Maven)
-      run: cd jvm/examples/maven && mvn versions:use-latest-versions -DgenerateBackupPoms=false
+      run: cd jvm/examples/maven && mvn versions:update-properties -DgenerateBackupPoms=false
         && cd -
       shell: bash
     - name: Check for changes
