--- a/jvm/examples/maven/typeflows/pom.xml
+++ b/jvm/examples/maven/typeflows/pom.xml
@@ -13,26 +13,20 @@
     <artifactId>typeflows</artifactId>
     <name>Typeflows</name>
 
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>io.typeflows</groupId>
-                <artifactId>typeflows-bom</artifactId>
-                <version>0.22.0-beta</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
+    <properties>
+        <typeflows.version>0.22.0-beta</typeflows.version>
+    </properties>
 
     <dependencies>
         <dependency>
             <groupId>io.typeflows</groupId>
             <artifactId>typeflows-github</artifactId>
+            <version>${typeflows.version}</version>
         </dependency>
         <dependency>
             <groupId>io.typeflows</groupId>
             <artifactId>typeflows-github-marketplace</artifactId>
+            <version>${typeflows.version}</version>
         </dependency>
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
@@ -104,7 +98,7 @@
             <plugin>
                 <groupId>io.typeflows</groupId>
                 <artifactId>typeflows-maven-plugin</artifactId>
-                <version>0.22.0-beta</version>
+                <version>${typeflows.version}</version>
                 <configuration>
                     <targetDirectory>..</targetDirectory>
                     <typeflowsClass>com.example.Typeflows</typeflowsClass>
