--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -34,8 +34,8 @@ jobs:
       run: cd jvm/examples/gradle && ./gradlew versionCatalogUpdate build && cd -
       shell: bash
     - name: Build (JVM Maven)
-      run: cd jvm/examples/maven && mvn versions:update-properties -DgenerateBackupPoms=false
-        && cd -
+      run: cd jvm/examples/maven/typeflows && mvn versions:update-properties -DgenerateBackupPoms=false
+        && mvn typeflows:export && cd -
       shell: bash
     - name: Check for changes
       id: changes
