--- a/jvm/examples/gradle/.github/workflows/deploy.yml
+++ b/jvm/examples/gradle/.github/workflows/deploy.yml
@@ -11,8 +11,7 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v5.0.0
-    - name: node
-      uses: actions/setup-node@v4
+    - uses: actions/setup-node@v4
       with:
         node-version: '20'
     - run: npm run build && npm test
@@ -22,8 +21,7 @@ jobs:
     needs:
     - build
     steps:
-    - name: deploy
-      uses: actions/deploy@v2
+    - uses: actions/deploy@v2
       with:
         target: production
         token: ${{ secrets.DEPLOY_TOKEN }}
