--- a/.github/workflows/update-dependencies.yml
+++ b/.github/workflows/update-dependencies.yml
@@ -16,7 +16,7 @@ jobs:
       uses: actions/checkout@v5.0.0
       with:
         token: ${{ secrets.GITHUB_TOKEN }}
-    - name: Set up JDK
+    - name: Setup Java
       uses: actions/setup-java@v5.0.0
       with:
         java-version: '21'
