--- a/jvm/examples/maven/.github/workflows/build.yml
+++ b/jvm/examples/maven/.github/workflows/build.yml
@@ -23,10 +23,11 @@ jobs:
       with:
         java-version: '21'
         distribution: adopt
-    - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@v4.4.2
-    - name: Build
-      run: ./gradlew check --info
+    - name: Set up Maven
+      uses: stCarolas/setup-maven@v5
+      with:
+        maven-version: 3.9.9
+    - run: mvn test
       shell: bash
     - name: Publish Test Report
       if: always()
