--- a/jvm/examples/gradle/.github/workflows/build.yml
+++ b/jvm/examples/gradle/.github/workflows/build.yml
@@ -1,7 +1,6 @@
 name: Build
-'on':
-  workflow_dispatch: {
-    }
+on:
+  workflow_dispatch:
   push:
     paths-ignore:
     - '**/.md'
@@ -23,7 +22,7 @@ jobs:
         java-version: '21'
         distribution: adopt
     - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@v4.4.2
+      uses: gradle/actions/setup-gradle@v5.0.0
     - name: Build
       run: ./gradlew check --info
       shell: bash
@@ -46,8 +45,7 @@ jobs:
         GH_TOKEN: ${{ secrets.WORKFLOWS_TOKEN }}
       shell: bash
     - name: Repository Dispatch
-      if: (github.ref == 'refs/heads/main' && steps.get-version.outputs.tag-created
-        == 'true')
+      if: (github.ref == 'refs/heads/main' && steps.get-version.outputs.tag-created == 'true')
       run: |-
         curl -L \
           -X POST \
