--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,6 @@
 name: Build
-'on':
-  workflow_dispatch: {
-    }
+on:
+  workflow_dispatch:
   push:
     paths-ignore:
     - '**/.md'
@@ -23,7 +22,7 @@ jobs:
         java-version: '21'
         distribution: adopt
     - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@v4.4.2
+      uses: gradle/actions/setup-gradle@v5.0.0
     - run: ./gradlew check
       shell: bash
   build-jvm-gradle:
@@ -38,7 +37,7 @@ jobs:
         java-version: '21'
         distribution: adopt
     - name: Setup Gradle
-      uses: gradle/actions/setup-gradle@v4.4.2
+      uses: gradle/actions/setup-gradle@v5.0.0
     - run: cd jvm/examples/gradle && ./gradlew check && cd -
       shell: bash
   build-jvm-maven:
